--- a/App/UASstyle.css
+++ b/App/UASstyle.css
@@ -2,20 +2,6 @@ input[type="number"] {
   max-width: 80%;
 }
 
-/* my sexy logo*/
-h1 {
-    text-decoration:none;
-    border:0;
-    width : 550px;
-    height : 50px;
-    margin : 0;
-    padding : 0;
-    right: 25px;
-    top: 5px;
-    position: relative;
-    background : url(bikair.png) no-repeat 0 0;
-}
-
 /* Tables*/
 .dataTables_length label,
                   .dataTables_filter label,
@@ -24,13 +10,8 @@ h1 {
                   .dataTables_wrapper {color: white!important;}
                   thead {color: white;}
 
-
-
-
-
-
-
-
+/* Input selector*/
+.selectize-input {font-size: 13px; line-height: 24px;} 
 
 div.outer {
   position: fixed;
@@ -89,10 +70,6 @@ div.main {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-gap: 10px;
- 
-
-
-
 }
 
 /*list of names*/
