--- a/App/www/2_Style/UAS_Style_AJCG.css
+++ b/App/www/2_Style/UAS_Style_AJCG.css
@@ -11,6 +11,9 @@ body, label, input, button, select {
     font-weight: 200;
 }
 
+/* Define size of side panel Shiny */
+.well {height: 780px;}"
+
 /* Customize main box */
 div.main {
     background-color: #282C31;
